# widget

./: .gitignore  LICENCE  README.md  README_japanese.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/component/: setup.tsx  setupI18next.tsx
src/component/parts/: select.tsx  text.tsx  toggle.tsx
src/component/settings/: color.tsx  info.tsx  main.tsx  personal.tsx  position.tsx  theme.tsx
src/css/: index.css
src/hooks/: useTheme.tsx  useThemeSetup.tsx  useTranslateSetup.tsx
src/lib/: i18next.ts  store.ts  theme.ts  window.ts
src/route/: ai.tsx  root.tsx  settings.tsx
src/startUp/: disableRightClick.ts  index.ts  position.ts
src/translate/: en.json  ja.json
src/translate/data/: en.json  ja.json
