[package]
name = "widget"
version = "1.0.0"
description = "This app is a widget with two completely different sides."
authors = ["ue0ba1ya1sh3i"]
edition = "2021"

[lib]
name = "widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
